# rira

./: CLAUDE.md  Cargo.toml  PLAN.md
.claude/: CLAUDE.md
.claude/commands/: pr.md
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: cli.rs  main.rs
crates/editor/: Cargo.toml
crates/editor/src/: buffer.rs  cursor.rs  history.rs  hit_test.rs  lib.rs  selection.rs  viewport.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs
crates/highlight/: Cargo.toml
crates/highlight/src/: lib.rs
crates/keymap/: Cargo.toml
crates/keymap/src/: action.rs  keymap.rs  lib.rs  types.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
crates/terminal-core/: Cargo.toml
crates/terminal-core/src/: lib.rs
crates/terminal-pty/: Cargo.toml
crates/terminal-pty/src/: lib.rs
crates/theme/: Cargo.toml
crates/theme/src/: color.rs  lib.rs  theme.rs
crates/ui/: Cargo.toml
crates/ui/src/: gutter.rs  lib.rs
crates/ui/tests/: integration.rs
docs/: architecture.md  code-rules.md  keymap.md  roadmap.md  testing.md  theme.md
