[package]
name = "rira-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ropey.workspace = true
crossbeam-channel.workspace = true
unicode-width = "0.2"

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
